--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="OCR Software, Free OCR Software, Image to text, convert image to text"/>
+    <meta name="description"
+      content="Image to text converter is a free online image OCR tool that allows you to extract text from image at one click. It
+converts picture to text accurately." />
     <title>Convert Image to text</title>
   </head>
   <body>
